examples/GKEDemo/manifests/vizier/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizier-core
  namespace: katib
  labels:
    app: vizier
    component: core
spec:
  ports:
    - port: 80
      targetPort: 6789
      protocol: TCP
      name: api
  selector:
    app: vizier
    component: core
